--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,65 @@
 <footer>
-    <h1>footer</h1>
+    <div class="subscribe">
+        <div>
+            <h1>STAY UPTO DATE ABOUT <br> OUR LATEST OFFERS</h1>
+        </div>
+        <div class="subscribe-email">
+            <input type="email" name="email" id="email" placeholder="Enter your email address">
+            <button>Subscribe to Newsletter</button>
+        </div>
+    </div>
+    <div class="copy">
+        <div class="footer-info">
+            <div class="footer-logo">
+                <a href="homepage.html" class="logo">SHOP.CO</a>
+                <p class="slogan">We have clothes that suits your style and which you’re proud to wear. From women to
+                    men.</p>
+                <div class="social">
+                    <a href="https://twitter.com"><img src="images/social/twitter.png" alt="twitter"></a>
+                    <a href="https://facebook.com"><img src="images/social/fb.png" alt="fb"></a>
+                    <a href="https://instagram.com"><img src="images/social/insta.png" alt="insta"></a>
+                    <a href="https://github.com/"><img src="images/social/git.png" alt="git"></a>
+                </div>
+            </div>
+            <div class="footer-links company">
+                <p>COMPANY</p>
+                <a href="#">About</a>
+                <a href="#">Features</a>
+                <a href="#">Works</a>
+                <a href="#">Career</a>
+            </div>
+            <div class="footer-links help">
+                <p>HELP</p>
+                <a href="#">Customer Support</a>
+                <a href="#">Delivery Details</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+            </div>
+            <div class="footer-links faq">
+                <p>FAQ</p>
+                <a href="#">Account</a>
+                <a href="#">Manage Deliveries</a>
+                <a href="#">Orders</a>
+                <a href="#">Payments</a>
+            </div>
+            <div class="footer-links resources">
+                <p>Resources</p>
+                <a href="#">Free eBooks</a>
+                <a href="#">Development Tutorial</a>
+                <a href="#">How to - Blog</a>
+                <a href="#">Youtube Playlist</a>
+            </div>
+        </div>
+        <div class="divider3"></div>
+        <div class="pay">
+            <p>Shop.co © 2000-2023, All Rights Reserved</p>
+            <div>
+                <button><img src="images/pay/visa.png" alt="visa"></button>
+                <button><img src="images/pay/master.png" alt="master"></button>
+                <button><img src="images/pay/paypal.png" alt="paypal"></button>
+                <button><img src="images/pay/applepay.png" alt="applepay"></button>
+                <button><img src="images/pay/googlepay.png" alt="googlepay"></button>
+            </div>
+        </div>
+    </div>
 </footer>
