--- a/homepage.html
+++ b/homepage.html
@@ -5,54 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/header-footer.css">
 </head>
 
 <body>
     <div id="header"></div>
 
-    <main>
-        <section class="cover-photo">
-            <div class="info">
-                <div>
-                    <div class="titles">
-                        <h1>FIND CLOTHES THAT MATCHES YOUR STYLE</h1><br>
-                        <p>Browse through our diverse range of meticulously crafted garments, designed <br> to bring out
-                            your individuality and cater to your sense of style.</p>
+    <section class="main">
+        <div class="info">
+            <div>
+                <div class="titles">
+                    <h1>FIND CLOTHES THAT MATCHES YOUR STYLE</h1><br>
+                    <p>Browse through our diverse range of meticulously crafted garments, designed <br> to bring out
+                        your individuality and cater to your sense of style.</p>
+                </div>
+                <button class="shop-now">Shop Now</button>
+                <div class="quantity-info">
+                    <div>
+                        <h1>200+</h1>
+                        <p>International Brands</p>
                     </div>
-                    <button class="shop-now">Shop Now</button>
-                    <div class="quantity-info">
-                        <div>
-                            <h1>200+</h1>
-                            <p>International Brands</p>
-                        </div>
-                        <div class="divider"></div>
-                        <div>
-                            <h1>2,000+</h1>
-                            <p>High-Quality Products</p>
-                        </div>
-                        <div class="divider"></div>
-                        <div>
-                            <h1>30,000+</h1>
-                            <p>Happy Customers</p>
-                        </div>
+                    <div class="divider"></div>
+                    <div>
+                        <h1>2,000+</h1>
+                        <p>High-Quality Products</p>
+                    </div>
+                    <div class="divider"></div>
+                    <div>
+                        <h1>30,000+</h1>
+                        <p>Happy Customers</p>
                     </div>
                 </div>
             </div>
-            <div class="logos">
-                <img src="images/small-star.png" alt="star 1" class="star1">
-                <img src="images/big-star.png" alt="star 2" class="star2">
-            </div>
-        </section>
-
-        <div class="wrapper">
-            <div class="item item1"><img src="images/brands/versace.png" alt=""></div>
-            <div class="item item2"><img src="images/brands/zara.png" alt=""></div>
-            <div class="item item3"><img src="images/brands/gucci.png" alt=""></div>
-            <div class="item item4"><img src="images/brands/prada.png" alt=""></div>
-            <div class="item item5"><img src="images/brands/calvin.png" alt=""></div>
         </div>
-    </main>
+        <div class="logos">
+            <img src="images/small-star.png" alt="star 1" class="star1">
+            <img src="images/big-star.png" alt="star 2" class="star2">
+        </div>
+    </section>
+
+    <div class="wrapper">
+        <div class="item item1"><img src="images/brands/versace.png" alt=""></div>
+        <div class="item item2"><img src="images/brands/zara.png" alt=""></div>
+        <div class="item item3"><img src="images/brands/gucci.png" alt=""></div>
+        <div class="item item4"><img src="images/brands/prada.png" alt=""></div>
+        <div class="item item5"><img src="images/brands/calvin.png" alt=""></div>
+    </div>
+
+    <section class="new-arrivals">
+        <h1>NEW ARRIVALS</h1>
+    </section>
+    <div class="divider2"></div>
+    <section class="top-selling">
+        <h1>TOP SELLING</h1>
+    </section>
 
     <div id="footer"></div>
 
