--- a/product detail page.html
+++ b/product detail page.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Detail Page</title>
+    <link rel="stylesheet" href="styles/header-footer.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="header"></div>
+
     <h1>Product Detail Page</h1>
+
+    <div id="footer"></div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
