--- a/header.html
+++ b/header.html
@@ -1,23 +1,43 @@
 <header>
     <div class="first-order">
         <p>Sign up and get 20% off to your first order. <a href="#">Sign Up Now</a></p>
-        <button><img src="images/close.png" alt="Close"></button>
+        <button id="close-first-order"><img src="images/close.png" alt="Close"></button>
     </div>
     <nav>
+        <div class="burger" id="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="logo">
             <a href="homepage.html">SHOP.CO</a>
         </div>
-        <div class="menu">
-            <a href="">Shop <img src="images/menu.png" alt="meny"></a>
+        <div class="menu" id="menu">
+            <a href="">Shop <img src="images/menu.png" alt="menu"></a>
             <a href="">On sale</a>
             <a href="">New Arrivals</a>
             <a href="">Brands</a>
         </div>
+
+        <div class="drop-down-menu" id="drop-down-menu">
+            <a href="homepage.html">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services <img src="images/menu.png" alt="menu"></a>
+            <a href="#">Shop <img src="images/menu.png" alt="menu"></a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">About Company</a>
+            <a href="#">Payment Gateway</a>
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Testimonials</a>
+            <button class="sign-up-now-button">Sign Up Now</button>
+        </div>
+
         <div class="search-bar">
             <button><img src="images/search.png" alt="search"></button>
             <input type="text" placeholder="Search fot products...">
         </div>
         <div class="cart-profile">
+            <button class="search-logo"><img src="images/search-logo.png" alt="search"></button>
             <button><img src="images/cart.png" alt="cart"></button>
             <button><img src="images/profile.png" alt="profile"></button>
         </div>
