--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="subscribe">
         <div>
-            <h1>STAY UPTO DATE ABOUT <br> OUR LATEST OFFERS</h1>
+            <h1>STAY UPTO DATE ABOUT <br class="pc-br"> OUR <br class="mobile-br"> LATEST OFFERS</h1>
         </div>
         <div class="subscribe-email">
             <input type="email" name="email" id="email" placeholder="Enter your email address">
