category page filters

--- a/homepage.html
+++ b/homepage.html
@@ -59,7 +59,7 @@
     <section class="new-arrivals">
         <h1>NEW ARRIVALS</h1>
         <div id="new-arrivals-container"></div>
-        <button id="new-arrivals-view-all-button" class="new-arrivals-view-all-button">View All</button>
+        <button onclick="location.href='category_page.html'" class="new-arrivals-view-all-button">View All</button>
     </section>
 
     <div class="divider3"></div>
@@ -67,7 +67,7 @@
     <section class="top-selling">
         <h1>TOP SELLING</h1>
         <div id="top-selling-container"></div>
-        <button id="top-selling-view-all-button" class="top-selling-view-all-button">View All</button>
+        <button onclick="location.href='category_page.html'" class="top-selling-view-all-button">View All</button>
     </section>
 
     <section class="browse-by-dress">
