--- a/header.html
+++ b/header.html
@@ -3,11 +3,7 @@
         <p>Sign up and get 20% off to your first order. <a href="#">Sign Up Now</a></p>
         <button id="close-first-order"><img src="images/close.png" alt="Close"></button>
     </div>
-    <!-- <div class="burger" id="burger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </div> -->
+
     <nav>
         <div class="burger" id="burger">
             <span></span>
@@ -28,6 +24,7 @@
             </div>
 
             <div class="drop-down-menu" id="drop-down-menu">
+                <button class="drop-down-menu-close" id="drop-down-menu-close"><img src="images/drop-down-close.png" alt=""></button>
                 <a href="homepage.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Services <img src="images/menu.png" alt="menu"></a>
