--- a/homepage.html
+++ b/homepage.html
@@ -73,10 +73,14 @@
     <section class="browse-by-dress">
         <h1>BROWSE BY DRESS STYLE</h1>
         <div class="browse-by-dress-container-imgs">
-            <div><img src="images/browse-by-dress-style/casual.png" alt="casual"></div>
-            <div><img src="images/browse-by-dress-style/formal.png" alt="formal"></div>
-            <div><img src="images/browse-by-dress-style/party.png" alt="party"></div>
-            <div><img src="images/browse-by-dress-style/gym.png" alt="gym"></div>
+            <div onclick="location.href='category_page.html'"><img src="images/browse-by-dress-style/casual.png"
+                    alt="casual"></div>
+            <div onclick="location.href='category_page.html'"><img src="images/browse-by-dress-style/formal.png"
+                    alt="formal"></div>
+            <div onclick="location.href='category_page.html'"><img src="images/browse-by-dress-style/party.png"
+                    alt="party"></div>
+            <div onclick="location.href='category_page.html'"><img src="images/browse-by-dress-style/gym.png" alt="gym">
+            </div>
         </div>
     </section>
 
@@ -98,7 +102,8 @@
     <div id="footer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/header_footer.js"></script>
+    <script src="scripts/homepage.js"></script>
 </body>
 
 </html>
