--- a/product_detail_page.html
+++ b/product_detail_page.html
@@ -15,37 +15,39 @@
 
     <div class="header-divider"></div>
 
-    <div class="menu-path">Home <img src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> Casual <img
-            src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> Men <img
-            src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> T-shirts</div>
+    <section class="product-details-content">
+        <div class="menu-path">Home <img src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> Casual <img
+                src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> Men <img
+                src="images/filters/menu-path-arrow.png" alt="menu-path-arrow"> T-shirts</div>
 
-    <section id="product-details"></section>
+        <section id="product-details"></section>
 
-    <div class="rating_reviews">
-        <div class="rating">
-            <div class="rating_reviews1">Product Details</div>
-            <div class="rating_reviews2">Rating & Reviewv</div>
-            <div class="rating_reviews3">FAQs</div>
-        </div>
-
-
-        <div class="all-reviews-filter">
-            <h4>All Reviews</h4>
-            <div class="all-reviews-filter-btns">
-                <div class="all-reviews-filter-btn"><img src="images/filters/filters.png" alt=""></div>
-                <div class="latest">Latest<img src="images/filters/down-arrow.png" alt=""></div>
-                <div class="write-review">Write a Review</div>
+        <div class="rating_reviews">
+            <div class="rating">
+                <div class="rating_reviews1">Product Details</div>
+                <div class="rating_reviews2">Rating & Reviewv</div>
+                <div class="rating_reviews3">FAQs</div>
             </div>
+
+
+            <div class="all-reviews-filter">
+                <h4>All Reviews</h4>
+                <div class="all-reviews-filter-btns">
+                    <div class="all-reviews-filter-btn"><img src="images/filters/filters.png" alt=""></div>
+                    <div class="latest">Latest<img src="images/filters/down-arrow.png" alt=""></div>
+                    <div class="write-review">Write a Review</div>
+                </div>
+            </div>
+
+            <div class="all-reviews" id="all-reviews"></div>
+
+            <button class="load-more">Load More Reviews</button>
         </div>
 
-        <div class="all-reviews" id="all-reviews"></div>
-
-        <button class="load-more">Load More Reviews</button>
-    </div>
-
-    <section class="also-like">
-        <h1>YOU MIGHT ALSO LIKE</h1>
-        <div id="also-like-container"></div>
+        <section class="also-like">
+            <h1>YOU MIGHT ALSO LIKE</h1>
+            <div id="also-like-container"></div>
+        </section>
     </section>
 
     <div id="footer"></div>
