--- a/product_detail_page.html
+++ b/product_detail_page.html
@@ -35,7 +35,25 @@
                 <div class="all-reviews-filter-btns">
                     <div class="all-reviews-filter-btn"><img src="images/filters/filters.png" alt=""></div>
                     <div class="latest">Latest<img src="images/filters/down-arrow.png" alt=""></div>
-                    <div class="write-review">Write a Review</div>
+                    <div class="write-review" id="write-review">Write a Review</div>
+                </div>
+            </div>
+
+            <div id="add-review" class="add-review">
+                <div class="add-review-content">
+                    <form>
+                        <h3>Name</h3>
+                        <input type="text" placeholder="Your Name" required><br>
+                        <div class="star-rating">
+                            <h3>Share your experience in scaling</h3>
+                            <img src="images/add-review/star-rating.png" alt="star-rating">
+                        </div>
+                        <textarea placeholder="Add your comments..." required></textarea><br>
+                        <div class="review-buttons">
+                            <button type="button" class="cancel">Cancel</button>
+                            <button type="submit" class="submit" id="submit">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
 
